2-aws-eks/deploys/1-weather-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: weatherapi
  name: weatherapi
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: weatherapi
