2-aws-eks/deploys/1-weather-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weatherapi-ingress
  labels:
    app: weatherapi
spec:
  defaultBackend:
    service:
      name: weatherapi
      port: 
        number: 80
  rules:
  - host: a4a26d3f3e0f148fa9cd76cb55891810-1717094970.us-east-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: weatherapi
            port: 
              number: 80
        pathType: ImplementationSpecific
